[package]
name = "satis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satis"
path = "src/main.rs"

[[bin]]
name = "import"
path = "src/import.rs"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.0"
fuzzy-matcher = "0.3.7"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = "1.40.0"
tokio-util = "0.7.12"
toml = "0.8.19"
